--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -25,7 +25,7 @@
                 </div>
                 {% endif %}
             </h2>
-            <h4 class="card-text">{{ post.author}}</h4>
+            <h4 class="card-text">{{ post.description}}</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
