--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,16 @@
 
 <script data-ad-client="ca-pub-7969374814064353" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        inlineMath: [['$','$'], ['\\(','\\)']],
+        processEscapes: true
+      }
+    });
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
